--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/humanize-plus": "^1.8.0",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
     "emotion": "^11.0.0",
@@ -24,9 +25,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "build": "craco build"
   },
   "eslintConfig": {
     "extends": [
