--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
     "@craco/craco": "^6.2.0",
     "@headlessui/react": "^1.3.0",
     "@heroicons/react": "^1.0.2",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/typography": "^0.4.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/humanize-plus": "^1.8.0",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-tabs": "^2.3.3",
     "emotion": "^11.0.0",
     "humanize-plus": "^1.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tabs": "^3.2.2",
     "swiper": "^6.8.0",
     "tailwind.macro": "^0.5.10",
+    "tailwindcss-children": "^2.1.0",
     "typescript": "^4.3.5",
     "web-vitals": "^1.0.1"
   },
