--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/humanize-plus": "^1.8.0",
     "@types/react-dom": "^17.0.9",
+    "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-tabs": "^2.3.3",
+    "daisyui": "^1.10.0",
     "emotion": "^11.0.0",
     "humanize-plus": "^1.8.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.2",
