--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-tabs": "^2.3.3",
+    "axios": "^0.21.1",
     "daisyui": "^1.10.0",
     "emotion": "^11.0.0",
     "humanize-plus": "^1.8.2",
