get products from server

--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.12"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.24.0"
   }
 }
