handle cart drawer with redux

--- a/front/package.json
+++ b/front/package.json
@@ -17,8 +17,10 @@
     "@types/humanize-plus": "^1.8.0",
     "@types/react-dom": "^17.0.9",
     "@types/react-icons": "^3.0.0",
+    "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
     "@types/react-tabs": "^2.3.3",
+    "@types/redux": "^3.6.0",
     "axios": "^0.21.1",
     "daisyui": "^1.10.0",
     "emotion": "^11.0.0",
