--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/humanize-plus": "^1.8.0",
+    "@types/js-cookie": "^2.2.7",
     "@types/react-dom": "^17.0.9",
     "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.18",
@@ -25,6 +26,7 @@
     "daisyui": "^1.10.0",
     "emotion": "^11.0.0",
     "humanize-plus": "^1.8.2",
+    "js-cookie": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
