--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12"
   },
   "devDependencies": {
