--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch back --exec node --experimental-modules back/server.js"
+    "start": "nodemon --watch back --exec node --experimental-modules back/server.js",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix front nmp run build --prefix front"
   },
   "author": "",
   "license": "ISC",
